--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link
       rel="canonical"
@@ -27,11 +30,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Discord Webhook Sender</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <script
-      src="script.js"
-      type="text/javascript"
-      type="text/javascript"
-    ></script>
+    <script src="script.js" type="text/javascript"></script>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -48,7 +47,6 @@
       Discord Webhook Sender
       <div class="description">a simple webhook sender for discord</div>
     </div>
-
     <div class="body">
       <div class="input-div">
         <p>Webhook Link:</p>
@@ -86,7 +84,7 @@
           <input type="text" class="input" id="avatar" />
         </div>
         <div class="message-div">
-          <p>Message</p>
+          <p>Message:</p>
           <textarea id="message" maxlength="2000"></textarea>
         </div>
         <div class="buttonDiv">
@@ -96,7 +94,17 @@
     </div>
     <div class="footer">
       <p>Made by <a href="https://github.com/peterhanania">Peter_#4444</a></p>
-      <span><a href="https://peterhanania.github.io/webhook-sender">Source code</a></span>
+      <span
+        ><a href="https://peterhanania.github.io/webhook-sender"
+          >Source code</a
+        ></span
+      >
+      <div class="switch">
+        <label>
+          <input type="checkbox" id="theme"/>
+          <span class="check"></span>
+        </label>
+      </div>
     </div>
   </body>
 </html>
