--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="footer">
       <p>Made by <a href="https://github.com/peterhanania">Peter_#4444</a></p>
       <span
-        ><a href="https://peterhanania.github.io/webhook-sender"
+        ><a href="https://github.com/peterhanania/webhook-sender"
           >Source code</a
         ></span
       >
