--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
   </head>
   <body>
+    <noscript><div class="no-js">Please enable javascript in your browser</div></noscript>
     <div class="title">
       Discord Webhook Sender
       <div class="description">a simple webhook sender for discord</div>
@@ -101,7 +102,7 @@
       >
       <div class="switch">
         <label>
-          <input type="checkbox" id="theme"/>
+          <input type="checkbox" id="theme" />
           <span class="check"></span>
         </label>
       </div>
